2009-07-17  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Drop dashboard widget, which is not very useful.
	- Only add javascript to ScoreRender option page but not others.

2009-05-26  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php (scorerender_get_def_settings):
	- Better auto-detection of binary locations.

2009-05-09  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php (scorerender_process_content):
	- Also show image dimension in output image tag.
	- Always use \r\n as line break when showing image code, otherwise
	  copy and paste can be problematic under Windows.
	* scorerender-class.php, wp-scorerender.php:
	- Completely remove transparency option, which is not optional now.

2009-05-07  Abel Cheung  <abelcheung@gmail.com>

	* scorerender*.php:
	- Update copyright and version.

	* scorerender-admin.php:
	- Drop transparency option in admin page.
	- Change admin page to match WordPress 2.7 style, and use jQuery.

=== ScoreRender 0.3.0 ===
2009-04-30  Abel Cheung  <abelcheung@gmail.com>

	* showcode.php, showcode.css:
	- Completely revamped to utilize Zero Clipboard by jhuckaby.
	  No more "mozilla not supported" thing.
	- Move to misc/ subfolder.

	* blank.gif, iepngfix.php:
	- Move to misc/ subfolder.

	* misc/ZeroClipbard.js, misc/ZeroClipboard.swf:
	- New files.

	* wp-scorerender.php:
	- No need to use DIRECTORY_SEPARATOR.
	- Adopt new path for IE png fix and showcode.php.

	* notation/pmw.php:
	- Fix to reflect the fact that PostScripts generated by PMW don't
	  have transparency info.

2009-04-08  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-admin.php:
	- Cosmetic word changes.

2009-04-05  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-admin.php:
	- Drop IE warning option, add IE translucency option instead.

2009-03-26  Abel Cheung  <abelcheung@gmail.com>

	* iepngfix.php, blank.gif:
	- Incorporate IE PNG Alpha Fix v2.0alpha3 from
	  http://www.twinhelix.com/css/iepngfix/